[workspace]

[package]
name = "yarrlox"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.4", features = ["derive"] }
enum_dispatch = "0.3.8"
logos = "0.12.1"
structstruck = "0.2.2"
thiserror = "1.0.37"
